--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <!--<link rel="stylesheet" href="style.css">-->
   </head>
   <body>
-     <script type="text/javascript">
+     <!--
+    <script type="text/javascript">
        document.location = "/eric-grasby-data-engineering-resume.pdf"
     </script>
+    -->
+    <ul>
+      <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Resume / CV </a></li>
+    </ul>
   </body>
 </html>
