--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
        document.location = "/eric-grasby-data-engineering-resume.pdf"
     </script>
     -->
+
+    <h1> Eric C Grasby </h1>
+    <h2> Software and Data Engineering - Based out of Arkansas </h2>
+    <br/>
+    <hr/>
     <ul>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Resume / CV </a></li>
     </ul>
