--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
     <ul>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Resume / CV </a></li>
     </ul>
+    <hr/>
+    <h2> "Blog Postings" </h2>
+    <p> These are blog posts that I write from time to time whenever I am thinking about stuff. I wanted to post them here to give people a view of me other than just my CV =) . </p>
+    <ul>
+      <li> <a href="blogposts/Repairing Stuff Instead of Buying New.pdf" target="_blank"> Repairing Old Things Instead of Buying New! </a></li>
+    </ul>
   </body>
 </html>
