--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h1> Eric C Grasby </h1>
     <h2> Software and Data Engineering - Based out of Arkansas </h2>
     <br/>
+    <figure>
+      <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 50%;"/>
+      <figcaption><em>Me, circa 2019</em></figcaption>
+    </figure>
     <hr/>
     <ul>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Resume / CV </a></li>
