Update index.html - wrap my "bio" in a div

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
        document.location = "/eric-grasby-data-engineering-resume.pdf"
     </script>
     -->
-
-    <h1> Eric C Grasby </h1>
-    <h2> Software and Data Engineering - Based out of Arkansas </h2>
-    <br/>
-    <figure>
-      <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 15%;"/>
-      <figcaption><em>Me, circa 2019</em></figcaption>
-    </figure>
+    <div id="me-intro">
+      <h1> Eric C Grasby, MSIQ </h1>
+      <h2> Software and Data Engineering - Based out of Arkansas </h2>
+      <br/>
+      <figure>
+        <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 15%;"/>
+        <figcaption><em>Me, circa 2019</em></figcaption>
+      </figure>
+    </div>
+    
     <hr/>
     <ul>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Resume / CV </a></li>
