--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h2> Software and Data Engineering - Based out of Arkansas </h2>
       <br/>
       <figure>
-        <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 15%;"/>
+        <img src="pix/me.jpg" alt="Me, Eric Grasby"/>
         <figcaption><em>Me, circa 2019</em></figcaption>
       </figure>
     </div>
