--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
        document.location = "/eric-grasby-data-engineering-resume.pdf"
     </script>
     -->
-    <div id="me-intro">
+    <div id="me-intro" style="text-align: center;">
       <h1> Eric C Grasby, MSIQ </h1>
       <h2> Software and Data Engineering - Based out of Arkansas </h2>
       <br/>
       <figure>
-        <img src="pix/me.jpg" alt="Me, Eric Grasby"/>
-        <figcaption><em>Me, circa 2019</em></figcaption>
+        <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 20%;"/>
+        <figcaption style="text-align: center;"><em>Me, circa 2019</em></figcaption>
       </figure>
     </div>
     
