add RSS feed link to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss/rss.xml" />
+    
     <title>Eric Charles Grasby - CV</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -16,6 +19,7 @@
     <div id="me-intro" style="text-align: center;">
       <h1> Eric C Grasby, MSIQ </h1>
       <h2> Software and Data Engineering - Based out of Arkansas </h2>
+      <a href="/rss/rss.xml"> My RSS Feed </a>
       <br/>
       <figure>
         <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 20%;"/>
