add reference to academic-cv.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <hr/>
     <h3> My ORCID Number: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank"> 0009-0009-7559-9146 </a> </h3>
     <ul>
-      <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Resume / CV </a></li>
+      <li> <a href="/academic-cv.html"> Academic CV </li>
+      <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Professional Experience </a></li>
     </ul>
     <hr/>
     <h2> "Blog Postings" </h2>
