Fixed reference to eric-g-academic.png in academic CV

--- a/academic-cv.html
+++ b/academic-cv.html
@@ -53,7 +53,7 @@
 <body>
   <header>
 	<div style="overflow: auto">
-	<img src="eric-g-academic.png" alt="Eric Grasby himself" style="float: right; width: 300px; margin-left: 1rem; border-radius: 8px;"/>
+	<img src="/pix/eric-g-academic.png" alt="Eric Grasby himself" style="float: right; width: 300px; margin-left: 1rem; border-radius: 8px;"/>
     <h1>Eric Charles Grasby</h1>
     <p>
 		Email: <a href="mailto:ericcgrasby@gmail.com">ericcgrasby@gmail.com</a><br />
