add favicon to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss/rss.xml" />
+    <link rel="icon" type="image/png" href="/pix/favicon.png" />
     
     <title>Eric Charles Grasby - CV</title>
     <link rel="stylesheet" href="style.css">
