Update academic-cv.html - added reference to archived page

--- a/academic-cv.html
+++ b/academic-cv.html
@@ -100,7 +100,7 @@
         Workshop Program Committee Member &mdash; Invited by Dr. Wei Dai &mdash; Applied Artificial Intelligence for Public Safety and Security Workshop on Big Data, 2025 (AI-PublicSecurity-2025) held with 2025 IEEE International Conference on Big Data, Macau
 		<br/><br/>
 		<span class="date">Review Committee: July 1 - November 1 2025</span>
-		<span class="site"><a href="https://www.publicsafetyinfo.com/workshop.html" target="_blank">Call for Papers</a></span>
+		<span class="site"><a href="https://ericgrasby.xyz/archived_pages/archived_applied_artificial_intelligence_for_public_safety_and_security_workshop_on_big_data_2025_ai_publicsecurity_2025.html" target="_blank">Call for Papers</a></span>
       </li>
     </ul>
 	<br/>
