--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-     <!--
-    <script type="text/javascript">
-       document.location = "/eric-grasby-data-engineering-resume.pdf"
-    </script>
-    -->
     <div id="me-intro" style="text-align: center;">
       <h1> Eric C Grasby, MSIQ </h1>
       <h2> Software and Data Engineering - Based out of Arkansas </h2>
@@ -31,7 +26,7 @@
     <hr/>
     <h3> My ORCID Number: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank"> 0009-0009-7559-9146 </a> </h3>
     <ul>
-      <li> <a href="/academic-cv.html"> Academic CV </li>
+      <li> <a href="/academic.html"> Academic CV </li>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Professional Experience </a></li>
     </ul>
     <hr/>
