--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <hr/>
     <h3> My ORCID Number: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank"> 0009-0009-7559-9146 </a> </h3>
     <ul>
-      <li> <a href="/academic.html"> Academic CV </li>
+      <li> <a href="/academic"> Academic CV </li>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Professional Experience </a></li>
     </ul>
     <hr/>
