Update index.html - add initial reference to /css/default_style.css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss/rss.xml" />
     <link rel="icon" type="image/png" href="/pix/favicon.png" />
-    
-    <title>Eric Charles Grasby - CV</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/default_style.css">
+    <title>Eric Charles Grasby</title>
   </head>
   <body>
     <div id="me-intro" style="text-align: center;">
