--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="/rss/rss.xml"> My RSS Feed </a>
       <br/>
       <figure>
-        <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 20%;"/>
+        <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 40%;"/>
         <figcaption style="text-align: center;"><em>Me, circa 2019</em></figcaption>
       </figure>
     </div>
@@ -26,7 +26,7 @@
     <h3> My ORCID Number: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank"> 0009-0009-7559-9146 </a> </h3>
     <ul>
       <li> <a href="/academic/"> Academic CV </li>
-      <li> <a href="/eric-grasby-data-engineering-resume.pdf"> Professional Experience </a></li>
+      <li> <a href="/eric-grasby-data-engineering-resume.pdf" target="_blank"> Professional Experience </a></li>
     </ul>
     <hr/>
     <h2> "Blog Postings" </h2>
