Update index.html - add html emoji

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="me-intro" style="text-align: center;">
       <h1> Eric C Grasby, MSIQ </h1>
       <h2> Software and Data Engineering - Based out of Arkansas </h2>
-      <a href="/rss/rss.xml"> My RSS Feed </a>
+      <a href="/rss/rss.xml"> My RSS Feed &#128225;</a>
       <br/>
       <figure>
         <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 40%;"/>
