--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     
     <hr/>
-    <h3> My ORCID Number: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank"> 0009-0009-7559-9146 </a> </h3>
+    <h3> My ORCID Number &#128174;: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank"> 0009-0009-7559-9146 </a> </h3>
     <ul>
       <li> <a href="/academic/"> Academic CV </li>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf" target="_blank"> Professional Experience </a></li>
