--- a/academic/index.html
+++ b/academic/index.html
@@ -2,54 +2,10 @@
 <html lang="en">
 <head>
   <link rel="icon" type="image/png" href="/pix/favicon.png" />
+  <link rel="stylesheet" href="/css/default_style.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eric C Grasby - Academic CV</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      line-height: 1.6;
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem;
-      background-color: #fff;
-      color: #000;
-    }
-    h1, h2, h3 {
-      margin-top: 2rem;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 0.25rem;
-    }
-    ul {
-      padding-left: 1.5rem;
-    }
-    li {
-      margin-bottom: 0.5rem;
-    }
-    .date {
-      float: right;
-      color: #555;
-    }
-	.site{
-	  float: left;
-	  color: #800080;
-	}
-	
-    .section {
-      margin-bottom: 2rem;
-    }
-    a {
-      color: #0077cc;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    hr {
-      margin-top: 2rem;
-      margin-bottom: 2rem;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -59,7 +15,7 @@
     <p>
 		Email: <a href="mailto:ericcgrasby@gmail.com">ericcgrasby@gmail.com</a><br />
 		Website: <a href="https://ericgrasby.xyz">ericgrasby.xyz</a><br />
-		ORCID: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank">0009-0009-7559-9146</a>
+		ORCID &#128174;: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank">0009-0009-7559-9146</a>
 		
 	</p>
 	<div>
