--- a/academic/index.html
+++ b/academic/index.html
@@ -84,9 +84,17 @@
   <section class="section">
 	<h2>Projects</h2>
 	<ul>
+		<!-- Dissertation (in progress)-->
 		<li>Eric C. Grasby. "A System to Support Monitoring and Surveillance Operations in a Wholesale Electricity Market." <i>Dissertation in progress &mdash; University of Arkansas at Little Rock</i> 
 		<br/><br/>
 		<span class="date">Expected publication year: 2027.</span>
+		</li>
+
+		<!-- Delphi Study - Part of dissertation work -->
+		<li>Eric C. Grasby. "A System to Support Monitoring and Surveillance Operations in a Wholesale Electricity Market (Delphi Study Component)." <i>University of Arkansas at Little Rock, Southwest Power Pool Market Monitoring Unit</i>
+		<br/></br>
+		<span class="site">Publication in progress</span>
+		<span class="date">2025.</span>
 		</li>
 	</ul>
   </section>
