--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <hr/>
     <h3> My ORCID Number &#128174;: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank"> 0009-0009-7559-9146 </a> </h3>
     <ul>
-      <li> <a href="/academic/"> Academic CV </li>
+      <li> <a href="/academic/"> Academic CV </a></li>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf" target="_blank"> Professional Experience </a></li>
+      <li> <a href="/library/"> Personal Library </a></li>
     </ul>
     <hr/>
     <h2> "Blog Postings" </h2>
