--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <img src="pix/me.jpg" alt="Me, Eric Grasby" style="width: 40%;"/>
         <figcaption style="text-align: center;"><em>Me, circa 2019</em></figcaption>
       </figure>
+      <figure>
+        <img src="pix/friday_about_an_hour_ago.jpg" alt="My cat (named 'Friday'), about an hour ago" style="width: 40%;"/>
+        <figcaption style="text-align: center;"><em>My cat (named "Friday"), about an hour ago</em></figcaption>
+      </figure>
     </div>
     
     <hr/>
