--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <figcaption style="text-align: center;"><em>Me, circa 2019</em></figcaption>
       </figure>
       <figure>
-        <img src="pix/friday_about_an_hour_ago.png" alt="My cat (named 'Friday'), about an hour ago" style="width: 40%;"/>
+        <img src="pix/friday_about_an_hour_ago.png" alt="My cat (named 'Friday'), about an hour ago"/>
         <figcaption style="text-align: center;"><em>My cat (named "Friday"), about an hour ago</em></figcaption>
       </figure>
     </div>
