--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <li> <a href="/academic/"> Academic CV </a></li>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf" target="_blank"> Professional Experience </a></li>
       <li> <a href="/library/"> Personal Library </a></li>
+      <li> <a href="https://github.com/echarlesgrasby" target="_blank"> GitHub </a></li>
+      <li> <a href="https://linkedin.com/in/echarlesgrasby" target="_blank"> LinkedIn </a></li>
     </ul>
     <hr/>
     <h2> "Blog Postings" </h2>
