--- a/academic/index.html
+++ b/academic/index.html
@@ -87,9 +87,11 @@
 		<!-- Dissertation (in progress)-->
 		<li>Eric C. Grasby. "A System to Support Monitoring and Surveillance Operations in a Wholesale Electricity Market." <i>Dissertation in progress &mdash; University of Arkansas at Little Rock</i> 
 		<br/><br/>
+		<span class="site"><a href="https://merlinlang.xyz" target="_blank"> Research website </a></span>
 		<span class="date">Expected publication year: 2027.</span>
 		</li>
-
+		<br/>
+		
 		<!-- Delphi Study - Part of dissertation work -->
 		<li>Eric C. Grasby. "A System to Support Monitoring and Surveillance Operations in a Wholesale Electricity Market (Delphi Study Component)." <i>University of Arkansas at Little Rock, Southwest Power Pool Market Monitoring Unit</i>
 		<br/></br>
