--- a/index.html
+++ b/index.html
@@ -42,5 +42,9 @@
     <ul>
       <li> <a href="blogposts/Repairing Stuff Instead of Buying New.pdf" target="_blank"> Repairing Old Things Instead of Buying New! </a> -- <em>June 12, 2025</em> </li>
     </ul>
+    <footer>
+    <hr />
+    <p>&copy; Eric Charles Grasby - 2025 | <a href="https://ericgrasby.xyz">You're home &#128522; </a></p>
+  </footer>
   </body>
 </html>
