--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <li> <a href="/library/"> Personal Library </a></li>
       <li> <a href="https://github.com/echarlesgrasby" target="_blank"> GitHub </a></li>
       <li> <a href="https://linkedin.com/in/echarlesgrasby" target="_blank"> LinkedIn </a></li>
+      <li> <a href="https://substack.com/@ericgrasby" target="_blank"> My Substack </li>
     </ul>
     <hr/>
     <h2> "Blog Postings" </h2>
