--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <ul>
       <li> <a href="blogposts/Repairing Stuff Instead of Buying New.pdf" target="_blank"> Repairing Old Things Instead of Buying New! </a> -- <em>June 12, 2025</em> </li>
       <li> <a href="blogposts/Debugging Via Differential Diagnosis.pdf" target="_blank"> Debugging Via Differential Diagnosis </a> -- <em>July 14, 2025</em> </li>
+      <li> <a href="blogposts/introductory-delphi-study.pdf" target="_blank"> The Delphi Technique </a> -- <em>August 9, 2025</em> </li>
     </ul>
     <footer>
     <hr />
