Added email contact information to homepage

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </ul>
     <footer>
     <hr />
-    <p>&copy; Eric Charles Grasby - 2025 | <a href="https://ericgrasby.xyz">You're home &#128522; </a></p>
+    <p>&copy; Eric Charles Grasby - 2025 | Personal &#128231;: <b>ecgrasby (at) icloud (dot) com</b> | University &#128231;: <b>ecgrasby (at) ualr (dot) edu</b> | <a href="https://ericgrasby.xyz">You're home &#128522; </a></p>
   </footer>
   </body>
 </html>
