--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li> <a href="/academic/"> Academic CV </a></li>
       <li> <a href="/eric-grasby-data-engineering-resume.pdf" target="_blank"> Professional Experience </a></li>
       <li> <a href="/library/"> Personal Library </a></li>
+      <li> <a href="/2025-conference-gallery">Conference Pictures - 2025</a></li>
       <li> <a href="https://github.com/echarlesgrasby" target="_blank"> GitHub </a></li>
       <li> <a href="https://linkedin.com/in/echarlesgrasby" target="_blank"> LinkedIn </a></li>
       <li> <a href="https://substack.com/@ericgrasby" target="_blank"> My Substack </a></li>
