Fixed broken references to /pix

--- a/2025-conference-gallery/index.html
+++ b/2025-conference-gallery/index.html
@@ -27,7 +27,7 @@
     <div class="gallery-row">
 		<div class="gallery-item">
             <div class="image-container">
-                <img src="./gallery-pix/eisg-boston-2.jpg" alt="Group picture with all of the Market Monitors - Boston (Seaport Hotel)">
+                <img src="/pix/gallery-pix/eisg-boston-2.jpg" alt="Group picture with all of the Market Monitors - Boston (Seaport Hotel)">
                 <div class="caption">ISO New England (IESO) organized this trip.</div>
             </div>
         </div>
@@ -41,13 +41,13 @@
     <div class="gallery-row">
         <div class="gallery-item portrait">
             <div class="image-container">
-                <img src="./gallery-pix/eisg-boston-1.jpg" width= "70%" alt="Eric presenting at the EISG in Boston, 2025">
+                <img src="/pix/gallery-pix/eisg-boston-1.jpg" width= "70%" alt="Eric presenting at the EISG in Boston, 2025">
                 <div class="caption">Delivering a talk that I wrote on DQ/IQ at the EISG in Boston (2025).</div>
             </div>
         </div>
 	    <div class="gallery-item portrait">
             <div class="image-container">
-                <img src="./gallery-pix/eric-harvard-1.jpg" width= "70%" alt="Sitting on the steps of a library on the edge of Harvard's campus. My mom isn't pictured here but she was there with me.">
+                <img src="/pix/gallery-pix/eric-harvard-1.jpg" width= "70%" alt="Sitting on the steps of a library on the edge of Harvard's campus. My mom isn't pictured here but she was there with me.">
                 <div class="caption">Sitting on the steps of a library on the edge of Harvard's campus. My mom isn't pictured here but she was there with me.</div>
             </div>
         </div>
@@ -60,19 +60,19 @@
     <div class="gallery-row">
         <div class="gallery-item">
             <div class="image-container">
-                <img src="./gallery-pix/meeting-megan-lieu.jpg" alt="Image 4">
+                <img src="/pix/gallery-pix/meeting-megan-lieu.jpg" alt="Image 4">
                 <div class="caption">Meeting Megan Lieu - An awesome LinkedIn influencer </div>
             </div>
         </div>
         <div class="gallery-item">
             <div class="image-container">
-                <img src="./gallery-pix/eric-met-frank-abagnale.png" alt="Image 5">
+                <img src="/pix/gallery-pix/eric-met-frank-abagnale.png" alt="Image 5">
                 <div class="caption">Meeting Frank Abagnale (<em>Catch Me If You Can</em>)</div>
             </div>
         </div>
         <div class="gallery-item">
             <div class="image-container">
-                <img src="./gallery-pix/eric-met-dr-goodnight.png" alt="Image 6">
+                <img src="/pix/gallery-pix/eric-met-dr-goodnight.png" alt="Image 6">
                 <div class="caption">Meeting Dr. James Goodnight (CEO of The SAS Institute)</div>
             </div>
         </div>
@@ -90,3 +90,4 @@
   
 </body>
 </html>
+
