add content from WUSS 2025

--- a/2025-conference-gallery/index.html
+++ b/2025-conference-gallery/index.html
@@ -60,24 +60,69 @@
     <div class="gallery-row">
         <div class="gallery-item">
             <div class="image-container">
-                <img src="/pix/gallery-pix/meeting-megan-lieu.jpg" alt="Image 4">
+                <img src="/pix/gallery-pix/meeting-megan-lieu.jpg" alt="eric and megan lieu">
                 <div class="caption">Meeting Megan Lieu - An awesome LinkedIn influencer </div>
             </div>
         </div>
         <div class="gallery-item">
             <div class="image-container">
-                <img src="/pix/gallery-pix/eric-met-frank-abagnale.png" alt="Image 5">
+                <img src="/pix/gallery-pix/eric-met-frank-abagnale.png" alt="eric and frank abagnale from Catch Me If You Can">
                 <div class="caption">Meeting Frank Abagnale (<em>Catch Me If You Can</em>)</div>
             </div>
         </div>
         <div class="gallery-item">
             <div class="image-container">
-                <img src="/pix/gallery-pix/eric-met-dr-goodnight.png" alt="Image 6">
+                <img src="/pix/gallery-pix/eric-met-dr-goodnight.png" alt="eric and dr jim goodnight">
                 <div class="caption">Meeting Dr. James Goodnight (CEO of The SAS Institute)</div>
             </div>
         </div>
         <p class="row-description">
             In the span of a couple of days in May, I got to meet some really cool folks!
+        </p>
+    </div>
+
+	    <!-- Row with 3 images -->
+    <div class="gallery-row">
+        <div class="gallery-item">
+            <div class="image-container">
+                <img src="/pix/gallery-pix/la-1.png" alt="eric and hot sake">
+                <div class="caption">Drinking hot sake on Ventura Boulevard the night before the conference began</div>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="image-container">
+                <img src="/pix/gallery-pix/la-2.png" alt="eric and danny modlin from SAS">
+                <div class="caption">Met Danny Modlin again (met him originally at SAS Innovate in Orlando, but I didn't get a picture with him)</div>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="image-container">
+                <img src="/pix/gallery-pix/la-3.png" alt="little akihabara in little tokyo in los angeles">
+                <div class="caption">While in Little Tokyo we came across a "Little Akihabara"</div>
+            </div>
+        </div>
+        <p class="row-description">
+            Mark Rouse and I went to WUSS 2025 (the "Western Users of SAS Software conference; yes, the founders were well aware of the acronym...). We had some neat encounters while we were there. I met a lot of people that I, regretably, did not get pictures with.
+			I think that the coolest "claim to fame", at this conference, was getting to meet Susan Slaughter --- the author of "The Little SAS Book" series. She gave a 3-part lecture that covered the Essentials of SAS, and I sat in on all 3 sessions.
+        </p>
+    </div>
+
+	    <!-- Row with 3 images -->
+    <div class="gallery-row">
+        <div class="gallery-item">
+            <div class="image-container">
+                <img src="/pix/gallery-pix/la-4.png" alt="rebecca and eric">
+                <div class="caption">My girlfriend (Rebecca) and I</div>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="image-container">
+                <img src="/pix/gallery-pix/santa-monica-blvd.png" alt="santa monica boulevard with a natural lens flare!">
+                <div class="caption">Picture of Santa Monica Boulevard at sunset on Thursday night (9/4/25). The lens flare was natural!</div>
+            </div>
+        </div>
+        <p class="row-description">
+            This conference ended up working out (the timing of it) in a way that I was able to take my girlfriend Rebecca with me. She hadn't had a chance to ever set foot in California (or even see an ocean!), so we remedied both of these problems with her tagging along.
         </p>
     </div>
 
@@ -90,4 +135,5 @@
   
 </body>
 </html>
+
 
