--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
     <p> These are blog posts that I write from time to time whenever I am thinking about stuff. I wanted to post them here to give people a view of me other than just my CV =) . </p>
     <h3> 2025 </h3>
     <ul>
-      <li> <a href="blogposts/Repairing Stuff Instead of Buying New.pdf" target="_blank"> Repairing Old Things Instead of Buying New! </a> -- <em>June 12, 2025</em> </li>
-      <li> <a href="blogposts/Debugging Via Differential Diagnosis.pdf" target="_blank"> Debugging Via Differential Diagnosis </a> -- <em>July 14, 2025</em> </li>
+
+      <li> <a href="blogposts/completed_my_proposal_defense.pdf" target="_blank"> Proposal Defense Done! </a> -- <em>October 3, 2025 </em> </li>
       <li> <a href="blogposts/introductory-delphi-study.pdf" target="_blank"> The Delphi Technique </a> -- <em>August 9, 2025</em> </li>
+      <li> <a href="blogposts/Debugging Via Differential Diagnosis.pdf" target="_blank"> Debugging Via Differential Diagnosis </a> -- <em>July 14, 2025</em> </li>
+      <li> <a href="blogposts/Repairing Stuff Instead of Buying New.pdf" target="_blank"> Repairing Old Things Instead of Buying New! </a> -- <em>June 12, 2025</em> </li>
+
     </ul>
     <footer>
     <hr />
