Revise academic CV with new project and links
Updated academic CV to include a review certificate link and modified project section.

--- a/academic/index.html
+++ b/academic/index.html
@@ -57,6 +57,7 @@
 		<br/><br/>
 		<span class="date">Review Committee: July 1 - November 1 2025</span>
 		<span class="site"><a href="https://ericgrasby.xyz/archive/publicsafetyinfo_AI_PublicSecurity_2025_Macau_Call_For_Papers.png" target="_blank">[Archived] Call for Papers</a></span>
+		<span class="site"><a href="https://ericgrasby.xyz/academic/Review_Eric_Grasby_certification_2025.pdf" target="_blank">Review Certificate</a></span>
       </li>
     </ul>
 	<br/>
@@ -118,4 +119,5 @@
   </footer>
 </body>
 </html>
+
 
