--- a/academic/index.html
+++ b/academic/index.html
@@ -57,6 +57,7 @@
 		<br/><br/>
 		<span class="date">Review Committee: July 1 - November 1 2025</span>
 		<span class="site"><a href="https://ericgrasby.xyz/archive/publicsafetyinfo_AI_PublicSecurity_2025_Macau_Call_For_Papers.png" target="_blank">[Archived] Call for Papers</a></span>
+		&nbsp; &raquo; &nbsp;
 		<span class="site"><a href="https://ericgrasby.xyz/academic/Review_Eric_Grasby_certification_2025.pdf" target="_blank">Review Certificate</a></span>
       </li>
     </ul>
@@ -119,5 +120,6 @@
   </footer>
 </body>
 </html>
+
 
 
