Fix HTML formatting and update academic CV content

--- a/academic/index.html
+++ b/academic/index.html
@@ -55,9 +55,8 @@
       <li>
         Workshop Program Committee Member &mdash; Invited by Dr. Wei Dai &mdash; Applied Artificial Intelligence for Public Safety and Security Workshop on Big Data, 2025 (AI-PublicSecurity-2025) held with 2025 IEEE International Conference on Big Data, Macau
 		<br/><br/>
-		<span class="date">Review Committee: July 1 - November 1 2025</span>
-		<span class="site"><a href="https://ericgrasby.xyz/archive/publicsafetyinfo_AI_PublicSecurity_2025_Macau_Call_For_Papers.png" target="_blank">[Archived] Call for Papers</a></span>
-		&nbsp; &raquo; &nbsp;
+		<span class="date">July 1 - November 1 2025</span>
+		<span class="site"><a href="https://ericgrasby.xyz/archive/publicsafetyinfo_AI_PublicSecurity_2025_Macau_Call_For_Papers.png" target="_blank">[Archived] Call for Papers</a> &nbsp; &raquo; &nbsp; </span>
 		<span class="site"><a href="https://ericgrasby.xyz/academic/Review_Eric_Grasby_certification_2025.pdf" target="_blank">Review Certificate</a></span>
       </li>
     </ul>
@@ -120,6 +119,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
