--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h3> My ORCID Number &#128174;: <a href="https://orcid.org/0009-0009-7559-9146" target="_blank"> 0009-0009-7559-9146 </a> </h3>
     <ul>
       <li> <a href="/academic/"> Academic CV </a></li>
-      <li> <a href="/eric-grasby-data-engineering-resume.pdf" target="_blank"> Professional Experience </a></li>
+      <li> <a href="/eric_grasby_cv.pdf" target="_blank"> Professional Experience </a></li>
       <li> <a href="/library/"> Personal Library </a></li>
       <li> <a href="/2025-conference-gallery">Conference Pictures - 2025</a></li>
       <li> <a href="https://github.com/echarlesgrasby" target="_blank"> GitHub </a></li>
