Update 2025 conference gallery HTML structure

--- a/2025-conference-gallery/index.html
+++ b/2025-conference-gallery/index.html
@@ -111,6 +111,12 @@
     <div class="gallery-row">
         <div class="gallery-item">
             <div class="image-container">
+                <img src="/pix/gallery-pix/rl_sas_books.png" alt="Rick Langston and old SAS books">
+                <div class="caption">Rick Langston showing off some "old school" SAS technical manuals during the keynote speech.</div>
+            </div>
+        </div>
+		<div class="gallery-item">
+            <div class="image-container">
                 <img src="/pix/gallery-pix/la-4.png" alt="rebecca and eric">
                 <div class="caption">My girlfriend (Rebecca) and I</div>
             </div>
@@ -135,5 +141,6 @@
   
 </body>
 </html>
+
 
 
