Update research interests and skills in index.html
Added 'Digital Humanities' to research interests and updated skills section to include 'SAS' and 'General Scripting'.

--- a/academic/index.html
+++ b/academic/index.html
@@ -46,6 +46,7 @@
 		<li>Information and data quality</li>
 		<li>Techniques for data and signal processing</li>
 		<li>Computational linguistics</li>
+		<li>Digital Humanities</li>
 	</ul>
   </section>
 
@@ -107,7 +108,9 @@
     <ul>
       <li>Java (Spring Boot)</li>
 	  <li>SQL (T-SQL, PL/SQL) </li>
+	  <li>SAS</li>
 	  <li>Front-end web development (React.js) </li>
+	  <li>General Scripting (bash/sh, PowerShell, Python)</li>
 	  <li>Text parsing</li>
 	  <li>CI/CD Techniques </li>
     </ul>
@@ -119,6 +122,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
