Update academic CV with additional education details

--- a/academic/index.html
+++ b/academic/index.html
@@ -32,6 +32,10 @@
         MS - Information Quality, University of Arkansas at Little Rock
         <span class="date">2020</span>
       </li>
+	  <li>
+		  Graduate Certificate - Information Quality, University of Arkansas at Little Rock
+		  <span class="date">2020</span>
+	  </li>
       <li>
         BS - Information Science, University of Arkansas at Little Rock
         <span class="date">2018</span>
@@ -93,12 +97,7 @@
 		<span class="date">Expected publication year: 2027.</span>
 		</li>
 		<br/>
-		
-		<!-- Delphi Study - Part of dissertation work -->
-		<li>Eric C. Grasby. "A System to Support Monitoring and Surveillance Operations in a Wholesale Electricity Market (Delphi Study Component)." <i>University of Arkansas at Little Rock, Southwest Power Pool Market Monitoring Unit</i>
-		<br/></br>
-		<span class="site">Publication in progress</span>
-		<span class="date">2025.</span>
+	
 		</li>
 	</ul>
   </section>
@@ -122,6 +121,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
